test fix of align

--- a/web_app/ezShop/src/pages/Catalog/Сatalog.module.scss
+++ b/web_app/ezShop/src/pages/Catalog/Сatalog.module.scss
@@ -62,6 +62,7 @@
     background-color: $gray-color-2;
     text-align: center;
     align-content: center;
+    align-items: center;
     font-family: $montserrat-regular;
     font-size: $font-size-3;
     color: $gray-color-3;
@@ -76,6 +77,7 @@
     background-color: $accent-color;
     text-align: center;
     align-content: center;
+    align-items: center;
     font-family: $montserrat-bold;
     font-size: $font-size-2;
     color: $black-color;
